[gd_scene load_steps=34 format=2]

[ext_resource path="res://Sprites/Barra Roja.png" type="Texture" id=1]
[ext_resource path="res://Fonts/mini_pixel-7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Music/GAMEPLAY.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sprites/grabber_sprite.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Game Scenes/game.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Game Scenes/pause.gd" type="Script" id=6]
[ext_resource path="res://Sprites/bullet_placeholder.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Enemy/enemy_bomb.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Enemy/enemy_long.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Friends/Foquito.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Friends/foquito_hijo.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Enemy/enemy_simple_shoot.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Friends/objetivo.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Game Scenes/bg.tscn" type="PackedScene" id=14]
[ext_resource path="res://Sprites/Barra azul.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Foquito-0006.png" type="Texture" id=16]
[ext_resource path="res://Scenes/Otras escenas/defeat.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Otras escenas/you_win.tscn" type="PackedScene" id=18]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.00392157, 0.0666667, 0.254902, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.00392157, 0.0666667, 0.254902, 1 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 40
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )
ProgressBar/colors/font_color = Color( 0.94, 0.94, 0.94, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 1 )
ProgressBar/styles/fg = SubResource( 2 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.435294, 0.87451, 0.941176, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.560784, 0.529412, 0.529412, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.905882, 0.533333, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="DynamicFont" id=14]
resource_local_to_scene = true
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 5
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=15]
default_font = SubResource( 14 )
Button/colors/font_color = Color( 0.968627, 0.956863, 0.956863, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.913725, 0.956863, 0.286275, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 5 )
Button/styles/focus = SubResource( 6 )
Button/styles/hover = SubResource( 7 )
Button/styles/normal = SubResource( 8 )
Button/styles/pressed = SubResource( 9 )
HSlider/icons/grabber = ExtResource( 4 )
HSlider/icons/grabber_disabled = null
HSlider/icons/grabber_highlight = ExtResource( 4 )
HSlider/icons/tick = null
HSlider/styles/grabber_area = SubResource( 10 )
HSlider/styles/grabber_area_highlight = SubResource( 11 )
HSlider/styles/slider = SubResource( 12 )
Panel/styles/panel = SubResource( 13 )

[node name="game" type="Node2D"]
script = ExtResource( 5 )
enemies = [ ExtResource( 12 ), ExtResource( 9 ), ExtResource( 8 ) ]
foquito_hijo = ExtResource( 11 )
you_win_scene = ExtResource( 18 )
you_lose_scene = ExtResource( 17 )

[node name="bg" parent="." instance=ExtResource( 14 )]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 50.0
margin_top = 54.0
margin_right = 972.0
margin_bottom = 551.0
color = Color( 0.164706, 0.803922, 0.611765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
margin_left = 90.0
margin_top = 70.0
margin_right = 934.0
margin_bottom = 343.0
color = Color( 0.980392, 0.0431373, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tiempoSemana" type="Timer" parent="."]
autostart = true

[node name="spawn_enemies" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="barra_ideas_refill" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="barra_vida_refill" type="Timer" parent="."]

[node name="spawn_points_node" type="Node2D" parent="."]

[node name="up" type="Node2D" parent="spawn_points_node"]

[node name="spawn_point" type="Position2D" parent="spawn_points_node/up"]
position = Vector2( 682, -70 )

[node name="spawn_point2" type="Position2D" parent="spawn_points_node/up"]
position = Vector2( 341, -70 )

[node name="left" type="Node2D" parent="spawn_points_node"]

[node name="spawn_point" type="Position2D" parent="spawn_points_node/left"]
position = Vector2( -70, 130 )

[node name="spawn_point2" type="Position2D" parent="spawn_points_node/left"]
position = Vector2( -70, 330 )

[node name="right" type="Node2D" parent="spawn_points_node"]

[node name="spawn_point" type="Position2D" parent="spawn_points_node/right"]
position = Vector2( 1094, 130 )

[node name="spawn_point2" type="Position2D" parent="spawn_points_node/right"]
position = Vector2( 1094, 330 )

[node name="objetivo" parent="." instance=ExtResource( 13 )]
position = Vector2( 512, 508.95 )

[node name="enemies_node" type="Node2D" parent="."]

[node name="foquitos_node" type="Node2D" parent="."]

[node name="UI_Layer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UI_Layer"]
margin_right = 1024.0
margin_bottom = 600.0
theme = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creador_vida" type="TextureProgress" parent="UI_Layer/UI"]
margin_left = 76.0
margin_top = 38.1299
margin_right = 300.0
margin_bottom = 66.1299
max_value = 50.0
step = 0.5
value = 50.0
allow_greater = true
allow_lesser = true
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 7 )
tint_progress = Color( 0.956863, 0.313726, 0.313726, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ideas_barra" type="TextureProgress" parent="UI_Layer/UI"]
margin_left = 76.0
margin_top = 73.1299
margin_right = 300.0
margin_bottom = 101.13
texture_over = ExtResource( 15 )
texture_progress = ExtResource( 7 )
tint_progress = Color( 0.141176, 0.356863, 0.945098, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI_Layer/UI"]
margin_left = 833.0
margin_top = 37.9584
margin_right = 943.0
margin_bottom = 77.9584
custom_colors/font_color = Color( 0.00392157, 0.0666667, 0.254902, 1 )
text = "SEMANA 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="semanaProgress" type="ProgressBar" parent="UI_Layer/UI"]
margin_left = 833.0
margin_top = 78.9584
margin_right = 943.0
margin_bottom = 105.958
max_value = 30.0
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="UI_Layer/UI"]
margin_left = 46.63
margin_top = 73.1498
margin_right = 73.63
margin_bottom = 102.15
texture = ExtResource( 16 )
expand = true
stretch_mode = 6

[node name="pause" type="Control" parent="UI_Layer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 15 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI_Layer/pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.105882, 0.592157, 0.980392, 0.580392 )

[node name="Label" type="Label" parent="UI_Layer/pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.5
margin_top = -172.544
margin_right = 88.5
margin_bottom = -112.544
text = "PAUSADO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Button" parent="UI_Layer/pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -30.0
margin_right = 107.0
margin_bottom = 30.0
focus_neighbour_bottom = NodePath("../reiniciar")
focus_next = NodePath("../reiniciar")
text = "Continuar"

[node name="reiniciar" type="Button" parent="UI_Layer/pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.5
margin_top = 25.8927
margin_right = 96.5
margin_bottom = 85.8927
text = "Reiniciar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Foco" parent="." instance=ExtResource( 10 )]
position = Vector2( 521.327, 383.52 )

[node name="Tween" type="Tween" parent="."]

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="timeout" from="tiempoSemana" to="." method="_on_tiempoSemana_timeout"]
[connection signal="timeout" from="spawn_enemies" to="." method="_on_spawn_enemies_timeout"]
[connection signal="timeout" from="barra_ideas_refill" to="." method="_on_barra_vida_refill_timeout"]
[connection signal="timeout" from="barra_vida_refill" to="." method="curar_objetivo"]
[connection signal="dead" from="objetivo" to="." method="_on_objetivo_dead"]
[connection signal="hit" from="objetivo" to="." method="_on_objetivo_hit"]
[connection signal="pressed" from="UI_Layer/pause/continue" to="UI_Layer/pause" method="_on_continue_pressed"]
[connection signal="pressed" from="UI_Layer/pause/reiniciar" to="UI_Layer/pause" method="_on_reiniciar_pressed"]
[connection signal="area_entered" from="Foco" to="." method="_on_Foco_area_entered"]
[connection signal="cambio_estado" from="Foco" to="." method="_on_Foco_cambio_estado"]
